--- a/data/Hto4b_ak8_points_pf_sv_full.yaml
+++ b/data/Hto4b_ak8_points_pf_sv_full.yaml
@@ -97,7 +97,10 @@ observers:
    - fj_genjet_pt
    - fj_genjet_mass
    - fj_genjet_sdmass
-   - fj_gen_H_aa_bbbb_mass_a
+   - fj_gen_H_aa_bbbb_mass_a1
+   - fj_gen_H_aa_bbbb_mass_a2
+   - fj_gen_H_aa_bbbb_mass_H
+   - fj_gen_H_aa_bbbb_mass_H_calc
    - fj_gen_H_aa_bbbb_dR_max_b
    - fj_gen_H_aa_bbbb_pt_min_b
    - pfParticleNetMassRegressionJetTags_mass
