--- a/data/a1_mass_regr.yaml
+++ b/data/a1_mass_regr.yaml
@@ -1,14 +1,14 @@
 
 selection:
-   (label_H_aa_bbbb == 1) & (fj_pt > 170) & ((event_no % 2) == 0) # original
+   # (label_H_aa_bbbb == 1) & (fj_pt > 170) & ((event_no % 2) == 0) # original
    ## selection for not Wide H. for wide H we have lower mass H, so we can have lower pt that still H 
    ## (label_H_aa_bbbb == 1) & (fj_pt > 200) & (fj_mass > 50) & (pfMassDecorrelatedParticleNetDiscriminatorsJetTags_XbbvsQCD > 0.1) & ((event_no % 2) == 0)
    
 
 test_time_selection:
    #(fj_mass > 1) & ( (event_no < 100000) | ((event_no > 175000) & (event_no < 335000)) | ((event_no > 7290000) & (event_no < 7510000)) ) # validation
-   (fj_mass > 0)  & ((event_no % 2) == 1)
-   #(fj_mass > 0)
+   # (fj_mass > 0)  & ((event_no % 2) == 1)
+   # (fj_mass > 0)
 
 new_variables:
    pfcand_mask: awkward.JaggedArray.ones_like(pfcand_etarel)
